<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.oerlex.as223th_assignment1.BMI"
    tools:showIn="@layout/app_bar_random_number">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="30sp"
        android:text="@string/labelTitle"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelWeight"
        android:textSize="25sp"
        android:id="@+id/weightLabel" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/weightfield"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelHeight"
        android:id="@+id/heightLabel"
        android:textSize="25sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/heightField" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/calculate"
        android:textSize="30sp"
        android:id="@+id/button"
        android:onClick="calculate"
        android:layout_gravity="top" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textSize="50sp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/result"
            android:gravity="center" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/reset"
        android:textSize="30sp"
        android:id="@+id/button2"
        android:onClick="reset"/>
</LinearLayout>
